<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:orientation="vertical">

    <RadioGroup
        android:visibility="gone"
        android:id="@+id/rg_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:orientation="vertical"
        android:padding="8dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_from_uri"/>

        <RadioButton
            android:id="@+id/radio_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_uri_to_file"/>

        <RadioButton
            android:id="@+id/radio_bitmap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_uri_to_bitmap"/>

    </RadioGroup>

</LinearLayout>